test/libsolidity/syntaxTests/natspec/docstring_empty_tag.sol
abstract contract C {
    /// @param
    function vote(uint id) public {}
}
// ----
// DocstringParsingError 3335: No param name given
